--- a/add.html
+++ b/add.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto" data-onsuccess="onSignIn">
                 <div id="user"></div>
-              <button type="button" class="btn btn-warning ms-2" onclick="signOut();">SignOut</button>
+              <button type="button" style="background-color: red;" class="btn btn-warning ms-2" onclick="signOut();">SignOut</button>
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
                     <label for="harga" class="form-label">harga indomie</label>
                     <input type="text" class="form-control" id="harga" placeholder="Masukkan harga indomie ">
                   </div>
-                  <button type="button" class="btn btn-success ms-2 mt-4" onclick="saveData();">Save Data</button>
+                  <button type="button" style="background-color: darkcyan;" class="btn btn-success ms-2 mt-4" onclick="saveData();">Save Data</button>
             </div>  
           </form>
         </div>                
