--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto" data-onsuccess="onSignIn">
                 <div id="user"></div>
-              <button type="button" class="btn btn-warning ms-2" onclick="signOut();">SignOut</button>
+              <button type="button" style="background-color: red;" class="btn btn-warning ms-2" onclick="signOut();">SignOut</button>
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <a class="btn btn-success ms-2 mt-5" href="add.html">Tambahkan Data indomie</a>
+                    <a style="background-color: darkcyan;" class="btn btn-success ms-2 mt-5" href="add.html">Tambahkan Data indomie</a>
                     <table id="tbl" class="table table-striped">
                         <thead>
                             <tr>
